cmake_minimum_required(VERSION 4.2)
project(BaitapCoSoLapTrinh C)

set(CMAKE_C_STANDARD 11)

add_executable(BaitapCoSoLapTrinh main.c
        "Luyện tập 1 - Chương 2/Bài 1.cpp"
        "Luyện tập 1 - Chương 2/Bài 2.cpp"
        "Luyện tập 1 - Chương 2/Bài 3.cpp"
        "Luyện tập 1 - Chương 2/Bài 4.cpp"
        "Luyện tập 1 - Chương 2/Bài 5.cpp"
        "Luyện tập 1 - Chương 2/Bài 6.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 30.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 31.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 32.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 33.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 35.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 36.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 37.cpp"
        "Luyện tập 2 - Chương 2/Bài 2.cpp"
        "Luyện tập 2 - Chương 2/Bài 3.cpp"
        "Luyện tập 2 - Chương 2/Bài 4.cpp"
        "Luyện tập 2 - Chương 2/Bài 5.cpp"
        "Luyện tập 2 - Chương 2/Bài 6.cpp"
        "Luyện tập 2 - Chương 2/Bài 7.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang38.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang39.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang40.cpp"
        "LuyenTap3_Chuong3/Bai2_Chuong3_Trang5.cpp"
        LuyenTap3_Chuong3/Bai2_Chuong3_Trang11.c
        LuyenTap3_Chuong3/Bai2_Chuong3_Trang12.c
        LuyenTap3_Chuong3/Bai3.c
        LuyenTap3_Chuong3/Bai4.c
        LuyenTap3_Chuong3/Bai5.c
        LuyenTap3_Chuong3/Bai6.c
        LuyenTap3_Chuong3/Bai7.c
        LuyenTap4_Chuong3/Bai1.c
        LuyenTap4_Chuong3/Bai2.c
        LuyenTap4_Chuong3/Bai3.c
        LuyenTap4_Chuong3/Bai4.c
        LuyenTap4_Chuong3/Bai5.c
        LuyenTap4_Chuong3/Bai6.c
        LuyenTap4_Chuong3/Bai7.c
)
