cmake_minimum_required(VERSION 4.2)
project(BaitapCoSoLapTrinh C)

set(CMAKE_C_STANDARD 11)

add_executable(BaitapCoSoLapTrinh main.c
        "Luyện tập 1 - Chương 2/Bài 1.cpp"
        "Luyện tập 1 - Chương 2/Bài 2.cpp"
        "Luyện tập 1 - Chương 2/Bài 3.cpp"
        "Luyện tập 1 - Chương 2/Bài 4.cpp"
        "Luyện tập 1 - Chương 2/Bài 5.cpp"
        "Luyện tập 1 - Chương 2/Bài 6.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 30.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 31.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 32.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 33.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 35.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 36.cpp"
        "Luyện tập 2 - Chương 2/Bài 1 trang 37.cpp"
        "Luyện tập 2 - Chương 2/Bài 2.cpp"
        "Luyện tập 2 - Chương 2/Bài 3.cpp"
        "Luyện tập 2 - Chương 2/Bài 4.cpp"
        "Luyện tập 2 - Chương 2/Bài 5.cpp"
        "Luyện tập 2 - Chương 2/Bài 6.cpp"
        "Luyện tập 2 - Chương 2/Bài 7.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang38.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang39.cpp"
        "LuyenTap3_Chuong3/Bai1_Chuong2_Trang40.cpp"
        "LuyenTap3_Chuong3/Bai2_Chuong3_Trang5.cpp"
        LuyenTap3_Chuong3/Bai2_Chuong3_Trang11.c
        LuyenTap3_Chuong3/Bai2_Chuong3_Trang12.c
        LuyenTap3_Chuong3/Bai3.c
        LuyenTap3_Chuong3/Bai4.c
        LuyenTap3_Chuong3/Bai5.c
        LuyenTap3_Chuong3/Bai6.c
        LuyenTap3_Chuong3/Bai7.c
        LuyenTap4_Chuong3/Bai1.c
        LuyenTap4_Chuong3/Bai2.c
        LuyenTap4_Chuong3/Bai3.c
        LuyenTap4_Chuong3/Bai4.c
        LuyenTap4_Chuong3/Bai5.c
        LuyenTap4_Chuong3/Bai6.c
        LuyenTap4_Chuong3/Bai7.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang15.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang17.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang19.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang24.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang26.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang28.c
        LuyenTap5_Chuong4/Bai1_Chuong4_Trang30.c
        LuyenTap5_Chuong4/Bai2.c
        LuyenTap5_Chuong4/Bai3.c
        LuyenTap5_Chuong4/Bai4.c
        LuyenTap6_Chuong4/HamDeQuy.c
        LuyenTap6_Chuong4/HamCallBack.c
        LuyenTap6_Chuong4/HamStatic.c
        LuyenTap6_Chuong4/Bai2.c
        LuyenTap7_Chuong5/Bai1.c
        LuyenTap7_Chuong5/Bai2.c
        LuyenTap7_Chuong5/Bai3.c
        LuyenTap7_Chuong5/Bai4.c
        LuyenTap7_Chuong5/Bai5.c
        LuyenTap7_Chuong5/Bai6.c
        LuyenTap7_Chuong5/Bai7.c
        LuyenTap7_Chuong5/Bai8.c
        LuyenTap7_Chuong5/Bai9.c
        LuyenTap7_Chuong5/Bai10.c
        LuyenTap8_Chuong5/Bai1.c
        LuyenTap8_Chuong5/Bai2.c
        LuyenTap8_Chuong5/Bai3.c
        LuyenTap9_Chuong6/Bai1.c
        LuyenTap9_Chuong6/Bai2.c
        LuyenTap9_Chuong6/Bai3.c
        LuyenTap9_Chuong6/Bai4.c
        LuyenTap9_Chuong6/Bai5.c
)
